Alteração da cor

--- a/mineracao.ipynb
+++ b/mineracao.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "dc519da2",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "a98aed6f",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "667b214d",
    "metadata": {},
    "outputs": [],
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "b89d8648",
    "metadata": {},
    "outputs": [
@@ -1551,6 +1551,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -1561,12 +1569,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Imports=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Imports=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -2414,6 +2428,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -2424,12 +2446,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Changed_files=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Changed_files=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -3277,6 +3305,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -3287,12 +3323,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Changes=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Changes=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -4140,6 +4182,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -4150,12 +4200,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Deletion=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Deletion=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -5003,6 +5059,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -5013,12 +5077,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Aditions=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Aditions=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -5866,6 +5936,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -5876,12 +5954,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Size_body=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Size_body=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -6729,6 +6813,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -6739,12 +6831,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>PR_comments=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>PR_comments=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -7592,6 +7690,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -7602,12 +7708,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>PR_size_comments=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>PR_size_comments=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -8455,6 +8567,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -8465,12 +8585,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Review_comments=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Review_comments=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -9318,6 +9444,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -9328,12 +9462,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Review_size_comments=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Review_size_comments=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -10181,6 +10321,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -10191,12 +10339,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Issue_comments=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Issue_comments=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -11044,6 +11198,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -11054,12 +11216,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Issue_size_comments=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Issue_size_comments=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -11907,6 +12075,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -11917,12 +12093,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Qtd_labels=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Qtd_labels=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -12770,6 +12952,14 @@
        },
        "data": [
         {
+         "customdata": [
+          [
+           "Difficult"
+          ],
+          [
+           "Easy"
+          ]
+         ],
          "domain": {
           "x": [
            0,
@@ -12780,12 +12970,18 @@
            1
           ]
          },
-         "hovertemplate": "Nivel=%{label}<br>Commits=%{value}<extra></extra>",
+         "hovertemplate": "Nivel=%{customdata[0]}<br>Commits=%{value}<extra></extra>",
          "labels": [
           "Difficult",
           "Easy"
          ],
          "legendgroup": "",
+         "marker": {
+          "colors": [
+           "#b30059",
+           "#809fff"
+          ]
+         },
          "name": "",
          "showlegend": true,
          "type": "pie",
@@ -13638,23 +13834,23 @@
     "        valores.append([label, df.loc[df['Nivel'] == label, column].sum()])\n",
     "\n",
     "    dataframe = pd.DataFrame(valores, columns=['Nivel', column])\n",
-    "    fig = px.pie(dataframe, values=column, names='Nivel', title=labelsGraf[idx])\n",
+    "    fig = px.pie(dataframe, values=column, names='Nivel', title=labelsGraf[idx],  color='Nivel', color_discrete_map={'Difficult':'#b30059', 'Easy':'#809fff'} )\n",
     "    fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "2c995bfa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2772aea80d0>"
+       "<seaborn.axisgrid.PairGrid at 0x1bc0ecd0d60>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -13672,6 +13868,7 @@
     }
    ],
    "source": [
+    "sns.color_palette()\n",
     "sns.pairplot(data=df, hue='Nivel')"
    ]
   }
