Finalizado visualizações; Iniciado comentarios do codigo

--- a/mineracao.ipynb
+++ b/mineracao.ipynb
@@ -13,7 +13,7 @@
    "id": "501e1bd6",
    "metadata": {},
    "source": [
-    "### Bibliotecas e aqreuivos utilizados\n",
+    "### Bibliotecas e arquivos utilizados\n",
     "Caso não exista o arquivo 'github_token.py' no diretorio, deve-se criar um arquivo com o seguinte conteúdo: \n",
     " \n",
     "```GITHUB_TOKEN = [PERSONAL_TOKEN]```\n",
@@ -25,18 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "dc519da2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "token:  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\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import requests\n",
@@ -45,9 +37,7 @@
     "from datetime import datetime\n",
     "from github_token import GITHUB_TOKEN\n",
     "\n",
-    "%matplotlib inline\n",
-    "\n",
-    "print('token: ', GITHUB_TOKEN)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -77,8 +67,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53e3b556",
+   "metadata": {},
+   "source": [
+    "# Após definir a organização e o repositorio, vamos buscar pelos dados do repositorio\n",
+    "\n",
+    "Para realizar essam mineração, inicialmente pegamos as labels ('difficult' e 'good first issue') do repositorio, para então procurar por todos os PR's (abertos e fechados), e utilizando uma expressão regular, pegamos o número da issue que aquele PR referencia. Com a issue em mão, vemos seus labels, caso sejam 'difficult' ou 'good first issue', adicionamos o número do PR para pegar os dados dele posteriormente. \n",
+    "\n",
+    "Realizamos o processo particionado dessa maneira para que não haja problemas referente ao token do github, que expira após uma certa quantidade de requisições."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3b0bf99f",
    "metadata": {},
    "outputs": [],
@@ -124,11 +126,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba182b97",
+   "metadata": {},
+   "source": [
+    "# Para cada um dos PR's (fechados e abertos), podemos ver a quantidade de dados que os mesmos possuem"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c25ddac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamanho EasyClosed:  974 \n",
+      "Tamanho HardClosed:  42\n"
+     ]
+    }
+   ],
    "source": [
     "# easyClosedPR = []\n",
     "# hardClosedPR = []\n",
@@ -147,10 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4333d582",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamanho EasyOpen:  71 \n",
+      "Tamanho HardOpen:  20\n"
+     ]
+    }
+   ],
    "source": [
     "# easyOpenPR = []\n",
     "# hardOpenPR = []\n",
@@ -165,6 +193,18 @@
     "#     print('erro')\n",
     "\n",
     "print('Tamanho EasyOpen: ', len(easyOpenPR), '\\nTamanho HardOpen: ', len(hardOpenPR))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a739161",
+   "metadata": {},
+   "source": [
+    "# Mineração\n",
+    "\n",
+    "Nesta etapa realizamos a mineração propriamente dita, ....\n",
+    "\n",
+    "Ao final, com o auxilio da biblioteca pandas, salvamos os dados em um dataframe e salvamos em um arquivo CSV."
    ]
   },
   {
