Ajustes na visualização bloxspot

--- a/mineracao.ipynb
+++ b/mineracao.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "dc519da2",
    "metadata": {},
    "outputs": [],
@@ -51,13 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "28145740",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "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\n"
+     ]
+    }
+   ],
    "source": [
     "# criar instancia do github com o token\n",
-    "g = Github('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')\n",
+    "g = Github(GITHUB_TOKEN)\n",
     "\n",
     "# criar uma instancia da organizacao\n",
     "org = g.get_organization('zulip')\n",
@@ -196,6 +204,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "517c105e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://github.com/zulip/zulip/pull/3908.diff'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pr = repo.get_pull(3908)\n",
+    "pr.diff_url"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9a739161",
    "metadata": {},
@@ -243,7 +273,8 @@
     "    html = requests.get(pr.diff_url)\n",
     "\n",
     "    # expressao regular para tirar as bibliotecas\n",
-    "    pythonType = re.findall('import \\w+', html.text)\n",
+    "    pythonType1 = re.findall('[+]from \\w+ import', html.text)\n",
+    "    pythonType2 = re.findall('[+]import', html.text)\n",
     "    js = re.findall('[+]const \\w+ = require', html.text)\n",
     "\n",
     "    # o tempo do ultimo commit\n",
@@ -277,7 +308,7 @@
     "                sizeReviewComment += len(reviewComments.body)\n",
     "                qtdReviewComment += 1\n",
     "\n",
-    "    data.append([situacao, nivel, numberPR, len(pythonType) + len(js), pr.changed_files, changes, deletions, aditions, len(pr.body), pr.created_at, pr.closed_at, pr.merged_at, timeDiff, datetime.now()-pr.created_at, pr.comments, size, qtdReviewComment, sizeReviewComment, qtdIssueComment, sizeIssueComment, len(pr.labels), pr.commits])"
+    "    data.append([situacao, nivel, numberPR, len(pythonType1) + len(pythonType2) + len(js), pr.changed_files, changes, deletions, aditions, len(pr.body), pr.created_at, pr.closed_at, pr.merged_at, timeDiff, datetime.now()-pr.created_at, pr.comments, size, qtdReviewComment, sizeReviewComment, qtdIssueComment, sizeIssueComment, len(pr.labels), pr.commits])"
    ]
   },
   {
