Alterações nos dados

--- a/mineracao.ipynb
+++ b/mineracao.ipynb
@@ -25,17 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "dc519da2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "import time\n",
     "import requests\n",
     "import pandas as pd\n",
     "from github import Github\n",
     "from datetime import datetime\n",
-    "from github_token import GITHUB_TOKEN\n",
+    "from github_token import GITHUB_TOKEN, GITHUB_TOKEN_2\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -51,22 +52,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "28145740",
+   "execution_count": 32,
+   "id": "56e981ac",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "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\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'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'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# criar instancia do github com o token\n",
-    "g = Github(GITHUB_TOKEN)\n",
-    "\n",
+    "g = Github(GITHUB_TOKEN_2)\n",
+    "GITHUB_TOKEN_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "28145740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# criar uma instancia da organizacao\n",
     "org = g.get_organization('zulip')\n",
     "\n",
@@ -88,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "3b0bf99f",
    "metadata": {},
    "outputs": [],
@@ -143,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "c25ddac0",
    "metadata": {},
    "outputs": [
@@ -174,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "4333d582",
    "metadata": {},
    "outputs": [
@@ -204,28 +217,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "517c105e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://github.com/zulip/zulip/pull/3908.diff'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pr = repo.get_pull(3908)\n",
-    "pr.diff_url"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9a739161",
    "metadata": {},
@@ -239,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d2bbe7ab",
    "metadata": {},
    "outputs": [],
@@ -247,6 +238,11 @@
     "# valores\n",
     "data = []\n",
     "dataAux = []\n",
+    "\n",
+    "def timer(start, end, text):\n",
+    "    hours, rem = divmod(end-start, 3600)\n",
+    "    minutes, seconds = divmod(rem, 60)\n",
+    "    print(text, '{:0>2}:{:0>2}:{:05.2f}'.format(int(hours),int(minutes),seconds))\n",
     "\n",
     "# funcao que adiciona valores ao dataframe\n",
     "def addPRValue(pr, numberPR, situacao, nivel):\n",
@@ -269,13 +265,21 @@
     "            if 'zulipbot' != comment.user.login:\n",
     "                size += len(comment.body)\n",
     "\n",
-    "    # requisicao HTTP para o arquivo de commits\n",
-    "    html = requests.get(pr.diff_url)\n",
+    "    error = False\n",
     "\n",
-    "    # expressao regular para tirar as bibliotecas\n",
-    "    pythonType1 = re.findall('[+]from \\w+ import', html.text)\n",
-    "    pythonType2 = re.findall('[+]import', html.text)\n",
-    "    js = re.findall('[+]const \\w+ = require', html.text)\n",
+    "    # requisicao HTTP para o arquivo de commits\n",
+    "    try:\n",
+    "        html = requests.get(pr.diff_url)\n",
+    "\n",
+    "        # expressao regular para tirar as bibliotecas de arquivos .py\n",
+    "        pythonType1 = re.findall('[+]from \\w+ import', html.text)\n",
+    "        pythonType2 = re.findall('[+]import', html.text)\n",
+    "\n",
+    "        # expressao regular para tirar as bibliotecas de arquivos .js\n",
+    "        js = re.findall('[+]const \\w+ = require', html.text)\n",
+    "    except:\n",
+    "        print('erro ao fazer requisição a url: ', pr.diff_url)\n",
+    "        error = True\n",
     "\n",
     "    # o tempo do ultimo commit\n",
     "    strTime = pr.last_modified.split(' ')\n",
@@ -308,77 +312,167 @@
     "                sizeReviewComment += len(reviewComments.body)\n",
     "                qtdReviewComment += 1\n",
     "\n",
-    "    data.append([situacao, nivel, numberPR, len(pythonType1) + len(pythonType2) + len(js), pr.changed_files, changes, deletions, aditions, len(pr.body), pr.created_at, pr.closed_at, pr.merged_at, timeDiff, datetime.now()-pr.created_at, pr.comments, size, qtdReviewComment, sizeReviewComment, qtdIssueComment, sizeIssueComment, len(pr.labels), pr.commits])"
+    "    qtdLabelIssue = 0\n",
+    "\n",
+    "    if None != pr.body:\n",
+    "        numberIssue = re.findall('#[0-9]+', pr.body)\n",
+    "        \n",
+    "        if len(numberIssue) > 0:\n",
+    "\n",
+    "            if len(numberIssue) > 1:\n",
+    "                numberIssue = numberIssue[0]\n",
+    "                \n",
+    "            numberIssue = int(str(numberIssue).split('#')[1].replace(']', '').replace(\"'\", ''))\n",
+    "\n",
+    "            try:\n",
+    "                issue = repo.get_issue(numberIssue)\n",
+    "                qtdLabelIssue = len(issue.labels)\n",
+    "            except:\n",
+    "                print('erro pr n°: ', numberPR, ' para label n°: ', numberIssue)\n",
+    "                error = True\n",
+    "            \n",
+    "    if not error:\n",
+    "        data.append([situacao, nivel, numberPR, len(pythonType1) + len(pythonType2) + len(js), pr.changed_files, changes, deletions, aditions, len(pr.body), pr.created_at, pr.closed_at, pr.merged_at, timeDiff, datetime.now()-pr.created_at, pr.comments, size, qtdReviewComment, sizeReviewComment, qtdIssueComment, sizeIssueComment, len(pr.labels), qtdLabelIssue, pr.commits])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "659b9db7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo de execução para PRs dificeis abertos:  00:00:51.17\n"
+     ]
+    }
+   ],
    "source": [
-    "# para os PR's dificeis abertos\n",
+    "inicio = time.time()\n",
+    "\n",
     "for numberPR in hardOpenPR:\n",
     "    pr = repo.get_pull(numberPR)\n",
     "    addPRValue(pr, numberPR, 'Open', 'Difficult')\n",
-    "    \n",
-    "dataAux = data"
+    "\n",
+    "dataAux = data\n",
+    "\n",
+    "timer(inicio, time.time(), 'Tempo de execução para PRs dificeis abertos: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "199a023e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo de execução para PRs dificeis fechados:  00:01:55.79\n"
+     ]
+    }
+   ],
    "source": [
-    "# para os PR's dificeis fechados\n",
+    "inicio = time.time()\n",
+    "\n",
     "for numberPR in hardClosedPR:\n",
     "    pr = repo.get_pull(numberPR)\n",
     "    addPRValue(pr, numberPR, 'Closed', 'Difficult')\n",
     "\n",
-    "dataAux = data"
+    "dataAux = data\n",
+    "\n",
+    "timer(inicio, time.time(), 'Tempo de execução para PRs dificeis fechados: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "bf6bfe20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo de execução para PRs faceis abertos:  00:03:08.03\n"
+     ]
+    }
+   ],
    "source": [
-    "# para os PR's faceis abertos\n",
+    "inicio = time.time()\n",
+    "\n",
     "for numberPR in easyOpenPR:\n",
     "    pr = repo.get_pull(numberPR)\n",
-    "    addPRValue(pr, numberPR, 'Open', 'Easy') #11:43\n",
+    "    addPRValue(pr, numberPR, 'Open', 'Easy')\n",
     "\n",
-    "dataAux = data"
+    "dataAux = data\n",
+    "\n",
+    "timer(inicio, time.time(), 'Tempo de execução para PRs faceis abertos: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "117f45d7",
+   "execution_count": 31,
+   "id": "58f479b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo da 1° execução para PRs faceis fechados:  00:24:59.47\n"
+     ]
+    }
+   ],
    "source": [
-    "# para os PR's faceis fechados\n",
+    "inicio = time.time()\n",
+    "\n",
     "for numberPR in easyClosedPR[int(len(easyClosedPR)/2):]:\n",
     "    pr = repo.get_pull(numberPR)\n",
     "    addPRValue(pr, numberPR, 'Closed', 'Easy')\n",
     "\n",
-    "dataAux = data"
+    "dataAux = data\n",
+    "\n",
+    "timer(inicio, time.time(), 'Tempo da 1° execução para PRs faceis fechados: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "id": "117f45d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo da 2° execução para PRs faceis fechados:  00:24:34.24\n"
+     ]
+    }
+   ],
+   "source": [
+    "inicio = time.time()\n",
+    "\n",
+    "for numberPR in easyClosedPR[:int(len(easyClosedPR)/2)]:\n",
+    "    pr = repo.get_pull(numberPR)\n",
+    "    addPRValue(pr, numberPR, 'Closed', 'Easy')\n",
+    "\n",
+    "dataAux = data\n",
+    "\n",
+    "timer(inicio, time.time(), 'Tempo da 2° execução para PRs faceis fechados: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "2fb6aa07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(data, columns=['Situation', 'Nivel', 'Number', 'Imports', 'Changed_files', 'Changes', 'Deletion', 'Aditions', 'Size_body', 'Create_date','Closed_date', 'Merge_date', 'Diff_MergeLastModify', 'Diff_CreateNow', 'PR_comments', 'PR_size_comments', 'Review_comments', 'Review_size_comments', 'Issue_comments', 'Issue_size_comments', 'Qtd_labels', 'Commits'])\n",
+    "df = pd.DataFrame(data, columns=['Situation', 'Nivel', 'Number', 'Imports', 'Changed_files', 'Changes', 'Deletion', 'Aditions', 'Size_body', 'Create_date','Closed_date', 'Merge_date', 'Diff_MergeLastModify', 'Diff_CreateNow', 'PR_comments', 'PR_size_comments', 'Review_comments', 'Review_size_comments', 'Issue_comments', 'Issue_size_comments', 'Qtd_labels_pr', 'Qtd_labels_issue', 'Commits'])\n",
     "df.to_csv('data/data.csv', sep=';', index=False)"
    ]
   }
